--- a/Pages/PersonPage.razor
+++ b/Pages/PersonPage.razor
@@ -22,7 +22,9 @@
                 <h3>@_person.Name</h3>
             </div>
         </div>
-        <h3>Связанные Фильмы: </h3>
+        <div class="mt-4">
+            <h3>Связанные Фильмы: </h3>
+        </div>
         @if (_movies != null)
         {
             int index = 1;
