--- a/Pages/TagPage.razor
+++ b/Pages/TagPage.razor
@@ -4,7 +4,7 @@
 @if (_tag != null)
 {
     <PageTitle>@_tag.Name</PageTitle>
-    <div class="row m-3">
+    <div class="row my-3">
         <h3>@_tag.Name</h3>
         @if (_movies != null)
         {
